--- a/paper/references.bib
+++ b/paper/references.bib
@@ -98,7 +98,7 @@
 }
 
 @misc{ibdb_about,
-  author       = {Internet Broadway Database (IBDB)},
+  author       = {Internet Broadway Database},
   title        = {About - Internet Broadway Database},
   year         = {2024},
   url          = {https://www.ibdb.com/About},
